# dpAssignment2Api

./: .gitignore  main.py  pyproject.toml  readme.md
app/: main.py
app/api/: controllers.py  schemas.py
app/core/: models.py  services.py  statistics.py
app/db/: in_memory.py  repository.py  sqlite.py
tests/: test_services.py  test_sqlite_repo.py  test_statistics.py
