[project]
name = "assignment2spore"
version = "0.1.0"
description = ""
authors = [{ name = "Alexandre Dolaqidze" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "ruff (>=0.14.3,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "fastapi (>=0.123.4,<0.124.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.ruff]
fix = true

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "ARG", # flake8-unused-arguments
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
fixable = ["I"]


[tool.ruff.lint.isort]
forced-separate = ["tests", "spore"]

[tool.ruff.lint.mccabe]
max-complexity = 10


[tool.pytest.ini_options]
testpaths = ["tests"]
